type safety improvements and tests; array nodes server support

--- a/protocols/OPC/samples/Makefile
+++ b/protocols/OPC/samples/Makefile
@@ -11,4 +11,5 @@ clean all: projects
 projects:
 	$(MAKE) -C OPCServer $(MAKECMDGOALS)
 	$(MAKE) -C OPCClient $(MAKECMDGOALS)
+	$(MAKE) -C jsrun $(MAKECMDGOALS)
 
