added Settings app

--- a/webui/Makefile
+++ b/webui/Makefile
@@ -13,6 +13,7 @@ clean all:
 	$(MAKE) -C jQuery $(MAKECMDGOALS)
 	$(MAKE) -C AngularJS $(MAKECMDGOALS)
 	$(MAKE) -C AngularFileUpload $(MAKECMDGOALS)
+	$(MAKE) -C AngularUITree $(MAKECMDGOALS)
 	$(MAKE) -C Launcher $(MAKECMDGOALS)
 	$(MAKE) -C SystemInformation $(MAKECMDGOALS)
 	$(MAKE) -C Devices $(MAKECMDGOALS)
@@ -23,6 +24,7 @@ clean all:
 	$(MAKE) -C GNSSTracking $(MAKECMDGOALS)
 	$(MAKE) -C MQTT $(MAKECMDGOALS)
 	$(MAKE) -C Console $(MAKECMDGOALS)
+	$(MAKE) -C Settings $(MAKECMDGOALS)
 	$(MAKE) -C ChartJS $(MAKECMDGOALS)
 	$(MAKE) -C MomentJS $(MAKECMDGOALS)
 	$(MAKE) -C TinyColor $(MAKECMDGOALS)
