added support for loading settings to MacchinaServer; updated configuration.

--- a/server/macchina.properties
+++ b/server/macchina.properties
@@ -13,6 +13,12 @@ osp.js.v8.flags = --harmony;--use-strict
 
 
 #
+# Settings
+#
+macchina.settings.path = ${application.configDir}settings.properties
+
+
+#
 # Authentication
 #
 # Note: Password for user "admin" is "admin".
@@ -108,7 +114,7 @@ mqtt.clients.eclipse.clientId = macchina.io
 #
 # WebTunnel
 #
-webtunnel.enable = true
+webtunnel.enable = false
 webtunnel.reflectorURI = https://reflector.my-devices.net
 webtunnel.deviceName = ${system.nodeName}
 webtunnel.domain = 3100ef24-e395-4726-9951-84a6cb7a1c11
