entities with ports, first attempt

--- a/server/macchina.properties
+++ b/server/macchina.properties
@@ -2,7 +2,7 @@
 # OSP Configuration
 #
 osp.codeCache          = ${application.dir}codeCache
-osp.bundleRepository   = ${application.configDir}../platform/OSP/bundles;${application.configDir}../devices/bundles;${application.configDir}../services/bundles;${application.configDir}../protocols/bundles;${application.configDir}../webui/bundles;${application.configDir}../samples/bundles
+osp.bundleRepository   = ${application.configDir}../platform/OSP/bundles;${application.configDir}../devices/bundles;${application.configDir}../services/bundles;${application.configDir}../protocols/bundles;${application.configDir}../webui/bundles;${application.configDir}../dataflow/bundles;${application.configDir}../dataflow/samples/bundles;${application.configDir}../samples/bundles
 osp.data               = ${application.configDir}data
 osp.web.cacheResources = true
 osp.web.sessionManager.cookiePersistence = transient
