--- a/platform/OSP/BundleAdmin/Makefile
+++ b/platform/OSP/BundleAdmin/Makefile
@@ -6,9 +6,13 @@
 # Makefile for BundleAdmin
 #
 
-BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundle
-
 include $(POCO_BASE)/build/rules/global
+
+ifneq (,$(findstring debug,$(DEFAULT_TARGET)))
+	BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundled
+else
+	BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundle
+endif
 
 objects = BundleAdmin BundleInstallHandler BundleListHandler \
 	BundleInfoHandler RequestHandler
