--- a/platform/OSP/WebEvent/Makefile-Bundle
+++ b/platform/OSP/WebEvent/Makefile-Bundle
@@ -6,9 +6,13 @@
 # Makefile for Poco OSP WebEvent Bundle
 #
 
-BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundle
-
 include $(POCO_BASE)/build/rules/global
+
+ifneq (,$(findstring debug,$(DEFAULT_TARGET)))
+	BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundled
+else
+	BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundle
+endif
 
 objects = WebEventServiceImpl WebEventRequestHandler WebEventBundleActivator
 
