--- a/protocols/Modbus/RTU/Makefile
+++ b/protocols/Modbus/RTU/Makefile
@@ -6,9 +6,13 @@
 # Makefile for macchina.io Modbus bundle
 #
 
-BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundle
-
 include $(POCO_BASE)/build/rules/global
+
+ifneq (,$(findstring debug,$(DEFAULT_TARGET)))
+	BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundled
+else
+	BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundle
+endif
 
 INCLUDE += -I$(PROJECT_BASE)/protocols/Modbus/include
 INCLUDE += -I$(PROJECT_BASE)/devices/Serial/include
