--- a/webui/ChartJS/Makefile
+++ b/webui/ChartJS/Makefile
@@ -8,9 +8,13 @@
 
 .PHONY: clean all
 
-BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundle
-
 include $(POCO_BASE)/build/rules/global
+
+ifneq (,$(findstring debug,$(DEFAULT_TARGET)))
+	BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundled
+else
+	BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundle
+endif
 
 all:
 	$(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -o../bundles ChartJS.bndlspec
