added Makefile; updated main config file for SensorLog sample

--- a/server/macchina.properties
+++ b/server/macchina.properties
@@ -88,6 +88,14 @@ webui.gnsstracking.refresh = 2
 
 
 #
+# SensorLog
+#
+sensorlog.sensors.illuminance.id = io.macchina.simulation.sensor#0
+sensorlog.sensors.temperature.id = io.macchina.simulation.sensor#2
+sensorlog.sensors.humidity.query = name == "io.macchina.simulation.sensor#1"
+
+
+#
 # MQTT
 #
 # Create a MQTT client that connects to the MQTT test server
