--- a/services/Makefile
+++ b/services/Makefile
@@ -12,3 +12,4 @@ clean all:
 	$(MAKE) -C WebEvent $(MAKECMDGOALS)
 	$(MAKE) -C DeviceStatus $(MAKECMDGOALS)
 	$(MAKE) -C NetworkEnvironment $(MAKECMDGOALS)
+	$(MAKE) -C MobileConnection $(MAKECMDGOALS)
