fix config file

--- a/server/macchina.properties
+++ b/server/macchina.properties
@@ -28,7 +28,7 @@ auth.simple.admin.passwordHash = 21232f297a57a5a743894a0e4a801fc3
 #
 # Serial Ports
 #
-#serial.ports.1.device = /dev/tty.usbserial 
+#serial.ports.1.device = /dev/tty.usbserial
 #serial.ports.1.params = 8N1
 #serial.ports.1.speed = 57600
 
@@ -128,7 +128,7 @@ webtunnel.deviceName = ${system.nodeName}
 webtunnel.domain = 3100ef24-e395-4726-9951-84a6cb7a1c11
 webtunnel.deviceId = 3100ef24-e395-4726-9951-${system.nodeId}
 webtunnel.username = ${webtunnel.deviceId}@${webtunnel.domain}
-webtunnel.password = 
+webtunnel.password =
 
 
 #
@@ -163,8 +163,8 @@ logging.channels.splitter.channels = console, webconsole, file
 #
 # NetSSL (OpenSSL) Configuration
 #
-openSSL.server.certificateFile = ${application.configDir}lobo.crt
-openSSL.server.privateKeyFile = ${application.configDir}lobo.key
+openSSL.server.certificateFile = ${application.configDir}macchina.pem
+openSSL.server.privateKeyFile = ${application.configDir}macchina.pem
 openSSL.server.verificationMode = none
 openSSL.server.verificationDepth = 9
 openSSL.server.loadDefaultCAFile = true
