Add GPIO Web UI
- Added web user interface to access GPIOs. It's possible
  to get/set the GPIO state by web.

Signed-off-by: Uilian Ries <uilianries@gmail.com>

--- a/webui/Makefile
+++ b/webui/Makefile
@@ -26,3 +26,4 @@ clean all:
 	$(MAKE) -C ChartJS $(MAKECMDGOALS)
 	$(MAKE) -C MomentJS $(MAKECMDGOALS)
 	$(MAKE) -C TinyColor $(MAKECMDGOALS)
+	$(MAKE) -C GPIO $(MAKECMDGOALS)
