fix : allow shared_debug build

--- a/protocols/BtLE/BlueZ/Makefile
+++ b/protocols/BtLE/BlueZ/Makefile
@@ -4,9 +4,13 @@
 # Makefile for macchina.io Bluetooth LE bundle
 #
 
-BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundle
-
 include $(POCO_BASE)/build/rules/global
+
+ifneq (,$(findstring debug,$(DEFAULT_TARGET)))
+	BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundled
+else
+	BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundle
+endif
 
 INCLUDE += -I$(PROJECT_BASE)/protocols/BtLE/include
 
