put BUNDLE_TOOL and PAGE_COMPILER make variable definitions into their own Make include files

--- a/devices/Simulation/Makefile
+++ b/devices/Simulation/Makefile
@@ -6,15 +6,11 @@
 
 include $(POCO_BASE)/build/rules/global
 
-ifneq (,$(findstring debug,$(DEFAULT_TARGET)))
-	BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundled
-else
-	BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundle
-endif
+include $(POCO_BASE)/OSP/BundleCreator/BundleCreator.make
 
 INCLUDE += -I$(PROJECT_BASE)/devices/Devices/include
 
-objects = SimulatedSensor SimulatedGNSSSensor BundleActivator 
+objects = SimulatedSensor SimulatedGNSSSensor BundleActivator
 
 target         = io.macchina.simulation
 target_version = 1
