--- a/devices/XDK/Makefile
+++ b/devices/XDK/Makefile
@@ -6,16 +6,12 @@
 
 include $(POCO_BASE)/build/rules/global
 
-ifneq (,$(findstring debug,$(DEFAULT_TARGET)))
-	BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundled
-else
-	BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundle
-endif
+include $(POCO_BASE)/OSP/BundleCreator/BundleCreator.make
 
 INCLUDE += -I$(PROJECT_BASE)/devices/Devices/include
 INCLUDE += -I$(PROJECT_BASE)/protocols/BtLE/include
 
-objects = XDKSensor HighRateSensor HighRateAccelerometer HighRateGyroscope HighRateMagnetometer HighRateButton BundleActivator 
+objects = XDKSensor HighRateSensor HighRateAccelerometer HighRateGyroscope HighRateMagnetometer HighRateButton BundleActivator
 
 target         = io.macchina.btle.xdk
 target_version = 1
