--- a/platform/OSP/Data/SQLite/Makefile
+++ b/platform/OSP/Data/SQLite/Makefile
@@ -4,9 +4,9 @@
 # Makefile for SQLite Bundle
 #
 
-BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundle
-
 include $(POCO_BASE)/build/rules/global
+
+include $(POCO_BASE)/OSP/BundleCreator/BundleCreator.make
 
 objects = SQLiteBundleActivator
 
