--- a/webui/Launcher/Makefile
+++ b/webui/Launcher/Makefile
@@ -6,13 +6,8 @@
 
 include $(POCO_BASE)/build/rules/global
 
-ifneq (,$(findstring debug,$(DEFAULT_TARGET)))
-	BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundled
-	PAGECOMPILER = $(POCO_BASE)/PageCompiler/$(POCO_HOST_BINDIR)/cpspcd
-else
-	BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundle
-	PAGECOMPILER = $(POCO_BASE)/PageCompiler/$(POCO_HOST_BINDIR)/cpspc
-endif
+include $(POCO_BASE)/OSP/BundleCreator/BundleCreator.make
+include $(POCO_BASE)/PageCompiler/PageCompiler.make
 
 objects =  \
 	LoginPage \
@@ -33,6 +28,6 @@ postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -
 include $(POCO_BASE)/build/rules/dylib
 
 # Rule for runnning PageCompiler
-src/%.cpp: src/%.cpsp 
+src/%.cpp: src/%.cpsp
 	@echo "** Compiling Page" $<
-	$(SET_LD_LIBRARY_PATH) $(PAGECOMPILER) --OSP $<
+	$(SET_LD_LIBRARY_PATH) $(PAGE_COMPILER) --OSP $<
