--- a/webui/Playground/Makefile
+++ b/webui/Playground/Makefile
@@ -6,11 +6,7 @@
 
 include $(POCO_BASE)/build/rules/global
 
-ifneq (,$(findstring debug,$(DEFAULT_TARGET)))
-	BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundled
-else
-	BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundle
-endif
+include $(POCO_BASE)/OSP/BundleCreator/BundleCreator.make
 
 objects =  \
 	SandboxRequestHandler \
