--- a/platform/OSP/NetSSL_OpenSSL/Makefile
+++ b/platform/OSP/NetSSL_OpenSSL/Makefile
@@ -6,11 +6,7 @@
 
 include $(POCO_BASE)/build/rules/global
 
-ifneq (,$(findstring debug,$(DEFAULT_TARGET)))
-	BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundled
-else
-	BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundle
-endif
+include $(POCO_BASE)/OSP/BundleCreator/BundleCreator.make
 
 objects = NetSSLBundleActivator
 
@@ -21,4 +17,4 @@ target_libs    = PocoOSP PocoNetSSL PocoNet PocoUtil PocoXML PocoFoundation
 postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles NetSSL_OpenSSL.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
-	
+
