--- a/devices/XDK/Makefile
+++ b/devices/XDK/Makefile
@@ -13,7 +13,7 @@ INCLUDE += -I$(PROJECT_BASE)/protocols/BtLE/include
 
 objects = XDKSensor HighRateSensor HighRateAccelerometer HighRateGyroscope HighRateMagnetometer HighRateButton BundleActivator
 
-target         = io.macchina.btle.xdk
+target         = io.macchina.xdk
 target_version = 1
 target_libs    = IoTBtLE IoTDevices PocoRemotingNG PocoOSP PocoUtil PocoXML PocoFoundation
 
