added support for Bosch CISS multisensor device

--- a/devices/Makefile
+++ b/devices/Makefile
@@ -14,6 +14,7 @@ clean all:
 	$(MAKE) -C Linux $(MAKECMDGOALS)
 	$(MAKE) -C XBeeSensor $(MAKECMDGOALS)
 	$(MAKE) -C XDK $(MAKECMDGOALS)
+	$(MAKE) -C CISS $(MAKECMDGOALS)
 	$(MAKE) -C SensorTag $(MAKECMDGOALS)
 	$(MAKE) -C GNSS/NMEA $(MAKECMDGOALS)
 	$(MAKE) -C GNSS $(MAKECMDGOALS)
