upgrade bundled V8 to 6.1

--- a/platform/JS/V8/Makefile
+++ b/platform/JS/V8/Makefile
@@ -8,18 +8,32 @@ include $(POCO_BASE)/build/rules/global
 
 V8VERSION = 6.1.534
 V8BASE = v8
-ifdef V8_NOSNAPSHOT
-V8SNAPSHOT = snapshot=off
+
+# tools/gyp/gyp -Dcomponent=shared_library -Dlibrary=shared -Dv8_use_snapshot="'false'"
+#   -Dlinux_use_bundled_binutils=0 -Dlinux_use_bundled_gold=0 -Dlinux_use_gold_flags=0
+#    -Dhost_os=linux -Dv8_enable_backtrace=0 -Ddcheck_always_on=0
+#    -Dv8_enable_handle_zapping=0 -Dv8_enable_slow_dchecks=0 -Dv8_enable_inspector=0
+#    -Dv8_enable_gdbjit=0 -Dwerror='' -Dhost_arch=x64 -Dv8_target_arch=x64 -Dtarget_arch=x64
+#    -Dtest_isolation_mode=noop -Dv8_optimized_debug=0 -Dv8_enable_i18n_support=0
+#    -Dwant_separate_host_toolset=0 -Dv8_use_external_startup_data=0 -Dv8_random_seed=0
+#    --generator-output=`pwd`/out -Goutput_dir=`pwd`/out -f make -Icommon.gypi --depth=. v8/src/v8.gyp
+
+GYPFLAGS = -Dcomponent=shared_library -Dlinux_use_bundled_binutils=0 \
+	-Dlinux_use_bundled_gold=0 -Dlinux_use_gold_flags=0 -Dv8_enable_backtrace=0 -Ddcheck_always_on=0 \
+	-Dv8_enable_handle_zapping=0 -Dv8_enable_slow_dchecks=0 -Dv8_enable_inspector=0 \
+	-Dv8_enable_gdbjit=0 -Dwerror='' -Dtest_isolation_mode=noop -Dv8_optimized_debug=0 \
+	-Dv8_enable_i18n_support=0 -Dwant_separate_host_toolset=0 -Dv8_use_external_startup_data=0 \
+	-Dv8_random_seed=0
+
+ifdef V8_ENABLE_SNAPSHOT
+GYPFLAGS += -Dv8_use_snapshot=true
 else
-GYPFLAGS=-Dv8_use_external_startup_data=0
-export GYPFLAGS
+GYPFLAGS += -Dv8_use_snapshot=false
+endif
 
 export CFLAGS
 export CXXFLAGS
 export LINKFLAGS
-
-endif
-V8FLAGS = component=shared_library i18nsupport=off werror=no $(V8SNAPSHOT) $(V8_EXTRA_FLAGS)
 
 .PHONY: v8base v8deps
 
@@ -36,12 +50,7 @@ ifeq ($(findstring arm,$(OSARCH)),arm)
 V8ARCH = arm
 endif
 ifeq ($(findstring armv7,$(OSARCH)),armv7)
-V8FLAGS += arm_version=7
-endif
-ifeq ($(findstring armv6,$(OSARCH)),armv6)
-V8FLAGS += arm_version=6
-# Workaround for Raspberry Pi
-V8FLAGS += armfpu=vfp armfloatabi=hard armneon=off
+GYPFLAGS += -Darm_version=7
 endif
 ifeq ($(OSARCH),mipsel)
 V8ARCH = mipsel
@@ -50,20 +59,27 @@ ifeq ($(OSARCH),mips)
 V8ARCH = mips
 endif
 
-$(info Building V8 for arch $(V8ARCH) with flags: $(V8FLAGS))
+ifeq ($(POCO_HOST_OSARCH),x86_64)
+V8HOSTARCH = x64
+endif
+ifeq ($(POCO_HOST_OSARCH),i386)
+V8HOSTARCH = ia32
+endif
+ifeq ($(POCO_HOST_OSARCH),i686)
+V8HOSTARCH = ia32
+endif
+ifeq ($(findstring arm,$(POCO_HOST_OSARCH)),arm)
+V8HOSTARCH = arm
+endif
+
+GYPFLAGS += -Dv8_target_arch=$(V8ARCH) -Dtarget_arch=$(V8ARCH) -Dhost_arch=$(V8HOSTARCH)
 
 ifeq ($(V8ARCH),)
 $(error Unknown target architecture)
 endif
 ifeq ($(findstring clang,$(CXX)),clang)
-GYP_DEFINES += clang=1
+GYPFLAGS += -Dclang=1
 CXX += -Wno-unknown-warning-option
-endif
-
-export GYP_DEFINES
-
-ifneq ($(POCO_TARGET_OSARCH),$(POCO_HOST_OSARCH))
-v8targetlibdir = lib.target
 endif
 
 # Reduce linker memory usage on ARM systems
@@ -74,34 +90,39 @@ endif
 
 default: v8install
 
-v8base: $(V8BASE)
+v8deps: out/Makefile
 
-v8deps: v8base
-	mkdir -p $(V8BASE)/out
+out/Makefile:
+	 tools/gyp/gyp $(GYPFLAGS) --generator-output=$(POCO_BASE)/JS/V8/out -Goutput_dir=$(POCO_BASE)/JS/V8/out -f make -Icommon.gypi --depth=. v8/src/v8.gyp
+
+# shared_debug: v8deps
+# 	-$(MAKE) -C out BUILDTYPE=Debug NO_LOAD="v8/src/v8_external_snapshot v8/src/v8_snapshot"
+#
+# shared_release: v8deps
+#	-$(MAKE) -C out BUILDTYPE=Release NO_LOAD="v8/src/v8_external_snapshot v8/src/v8_snapshot"
 
 shared_debug: v8deps
-	-$(MAKE) -C $(V8BASE) $(V8ARCH).debug $(V8FLAGS)
+	-$(MAKE) -C out BUILDTYPE=Debug v8 v8_libplatform
 
 shared_release: v8deps
-	-$(MAKE) -C $(V8BASE) $(V8ARCH).release $(V8FLAGS)
+	-$(MAKE) -C out BUILDTYPE=Release v8 v8_libplatform
 
 all_shared: shared_debug shared_release
 
 v8install: $(DEFAULT_TARGET)
-	if [ -d $(V8BASE)/out/$(V8ARCH).release ] ; then cp $(V8BASE)/out/$(V8ARCH).release/$(v8targetlibdir)/libv8$(SHAREDLIBLINKEXT) $(LIBPATH) ; fi
-	if [ -d $(V8BASE)/out/$(V8ARCH).release ] ; then cp $(V8BASE)/out/$(V8ARCH).release/$(v8targetlibdir)/libv8_libplatform.a $(LIBPATH) ; fi
-	if [ -d $(V8BASE)/out/$(V8ARCH).debug ] ; then cp $(V8BASE)/out/$(V8ARCH).debug/$(v8targetlibdir)/libv8$(SHAREDLIBLINKEXT) $(LIBPATH)/libv8d$(SHAREDLIBLINKEXT) ; fi
-	if [ -d $(V8BASE)/out/$(V8ARCH).debug ] ; then cp $(V8BASE)/out/$(V8ARCH).debug/$(v8targetlibdir)/libv8_libplatform.a $(LIBPATH)/libv8_libplatformd.a ; fi
+	if [ -d out/Release ] ; then cp out/Release/libv8$(SHAREDLIBLINKEXT) $(LIBPATH) ; fi
+	if [ -d out/Release ] ; then cp out/Release/libv8_libbase$(SHAREDLIBLINKEXT) $(LIBPATH) ; fi
+	if [ -d out/Release ] ; then cp out/Release/libv8_libplatform$(SHAREDLIBLINKEXT) $(LIBPATH) ; fi
+	if [ -d out/Debug ] ; then cp out/Debug/libv8$(SHAREDLIBLINKEXT) $(LIBPATH)/libv8d$(SHAREDLIBLINKEXT) ; fi
+	if [ -d out/Debug ] ; then cp out/Debug/libv8_libbase$(SHAREDLIBLINKEXT) $(LIBPATH)/libv8_libbased$(SHAREDLIBLINKEXT) ; fi
+	if [ -d out/Debug ] ; then cp out/Debug/libv8_libplatform$(SHAREDLIBLINKEXT) $(LIBPATH)/libv8_libplatformd$(SHAREDLIBLINKEXT) ; fi
 	mkdir -p include
 	mkdir -p include/libplatform
 	cp $(V8BASE)/include/*.h include
 	cp $(V8BASE)/include/libplatform/*.h include/libplatform
 
 clean:
-	-$(MAKE) -C $(V8BASE) clean
+	$(RM) out
 
-distclean:
-	$(RM) $(V8BASE)
+distclean: clean
 	$(RM) include
-	$(RM) $(LIBPATH)/libv8$(SHAREDLIBLINKEXT)
-	$(RM) $(LIBPATH)/libv8d$(SHAREDLIBLINKEXT)
